--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Different approaches on React Component styling!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Whole Lotta React Styling - Dimitris Trechas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <style>
+      section {
+        padding-bottom: 20px;
+        border-bottom: 1px solid lightgray;
+      }
+      .main {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 0 2rem;
+      }
+      .component-wrapper {
+        margin-bottom: 1rem;
+      }
+    </style>
     <div id="root"></div>
     <!--
       This HTML file is a template.
